# collabamap

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: consts.py  deps.py  main.py  models.py  ratelimit.py  routes.py  schemas.py  server.py
app/routes/: auth.py
app/routes/api/: config.py  events.py  reports.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  App.tsx  EventMap.css  EventMap.jsx  HomePage.jsx  HomePage.tsx  index.css  index.jsx  index.tsx  main.jsx  serviceWorkerRegistration.js
frontend/src/components/: InstallPWA.jsx
